--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ deploy:
     file: '/home/travis/build/DD-DeCaF/ice/target/ice-*.war'
     skip_cleanup: true
     on:
+      all_branches: true
       repo: DD-DeCaF/ice
   - provider: script
     script: ./push_to_hub_travis.sh
