chore: update ingress service name

--- a/deployment/ingress.yml
+++ b/deployment/ingress.yml
@@ -13,5 +13,5 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: ice-production
+          serviceName: ice
           servicePort: 80
