--- a/deployment/service.yml
+++ b/deployment/service.yml
@@ -9,7 +9,11 @@ spec:
     app: ice
     env: production
   ports:
-  - name: web
+  - name: http
     protocol: TCP
     port: 80
     targetPort: 8080
+  - name: https
+    protocol: TCP
+    port: 443
+    targetPort: 8443
